@@ -1,7 +1,7 @@
 /**
  * Framework - A tool for creating arbitrary certificates
  * <p>
- * Copyright 2014-2024 Ruhr University Bochum, Paderborn University, Hackmanit GmbH
+ * Copyright 2014-2025 Ruhr University Bochum, Paderborn University, Hackmanit GmbH
  * <p>
  * Licensed under Apache License, Version 2.0
  * http://www.apache.org/licenses/LICENSE-2.0.txt
@@ -20,7 +20,6 @@ import de.rub.nds.x509attacker.config.X509CertificateConfig;
 
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class VersionParameter extends CertificateSpecificParameter<Integer> {
@@ -43,7 +42,7 @@ public class VersionParameter extends CertificateSpecificParameter<Integer> {
     public List<DerivationParameter<X509CertificateChainConfig, Integer>>
         getNonNullParameterValues(DerivationScope derivationScope) {
         if (!getParameterScope().isEntity()) {
-            return Collections.singletonList(generateValue(2));
+            return List.of(generateValue(0), generateValue(1), generateValue(2));
         }
         List<DerivationParameter<X509CertificateChainConfig, Integer>> parameterValues = new ArrayList<>();
         List<Integer> supportedVersions = ContextHelper.getFeatureReport().getSupportedVersions();
